# git-harness

./: .gitignore  AGENTS.md  CURSOR_ULTRA_PLAN.md  README.md  SPEC.md  go.mod  go.sum
.github/workflows/: ci.yml
cmd/git-harness-cli/: main.go
git/: operations.go  operations_test.go  rewrite_scenario.go  rewrite_scenario_test.go  scanner.go  scanner_test.go  types.go  types_test.go
mnt/user-data/outputs/git-harness-plan/specs/002-test-coverage/: SPEC.md
mnt/user-data/outputs/git-harness-plan/specs/003-gitcore-scaffold/: SPEC.md
mnt/user-data/outputs/git-harness-plan/specs/004-wire-consumers/: SPEC.md
safety/: redact_test.go  secrets.go  secrets_test.go
testkit/: GIT_HARNESS_SPEC.md  README.md
testkit/.specify/memory/: constitution.md
testkit/.specify/scripts/: validate_specify.sh
testkit/.specify/specs/001-polyglot-harness/: plan.md  spec.md  tasks.md
testkit/.specify/specs/001-polyglot-harness/checklists/: quality.md
testkit/.specify/specs/001-polyglot-harness/contracts/: cli-protocol.json
testkit/java/: README.md  pom.xml
testkit/python/: README.md  pyproject.toml
testkit/python/git_harness/: __init__.py  cli.py
testkit/python/samples/: README.md  smoke_repo_flow.py  smoke_safety_flow.py
testkit/python/tests/: conftest.py  test_cli_bridge.py
wrappers/: README.md
wrappers/java/: README.md
wrappers/python/: README.md
wrappers/python/git_harness/: cli.py
wrappers/python/samples/: README.md  smoke_repo_flow.py  smoke_safety_flow.py
wrappers/python/tests/: conftest.py  test_cli_bridge.py
(+8 files in other folders)
